--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -34,8 +34,8 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
-    border-top: 2px solid #262626;
-    border-bottom: 2px solid #262626;
+    border-top: 2px solid #ff7300;
+    border-bottom: 2px solid #ff7300;
     transform: scaleY(2);
     opacity: 0;
     transition: 0.3s;
@@ -47,7 +47,7 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #262626;
+    background-color: #ffa200;
     transform: scale(0);
     opacity: 0;
     transition: 0.3s;
