--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -17,18 +17,7 @@ body {
   width: 100%;
   background-color: #ffffff;
 }
-@media (max-width: 390px) {
-  .navbar {
-    width: 80%;
-    top: 10px;
-    left: 5px;
-  }
-}
-@media (min-width: 391px) and (max-width: 780px) {
-  nav {
-    width: 100%;
-  }
-}
+
 #active {
   position: relative;
   display: block;
@@ -43,12 +32,12 @@ body {
   &:before {
     content: "";
     position: absolute;
-    top: 0;
+    top: 0px;
     left: 0;
     width: 100%;
     height: 100%;
-    border-top: 2px solid #ff7300;
-    border-bottom: 2px solid #ff7300;
+    border-top: 2px solid #262626;
+    border-bottom: 2px solid #262626;
     transform: scaleY(2);
     opacity: 0;
     transition: 0.3s;
@@ -59,8 +48,8 @@ body {
     top: 2px;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: #ffa200;
+    height: 88%;
+    background-color: #262626;
     transform: scale(0);
     opacity: 0;
     transition: 0.3s;
